# face-finder-2000

./: .gitignore  CMakeLists.txt  OPENCV_LIBS  README.md  face_finder.cpp  opencv_libs.cmake
